add missing endpoints related to admins, assignments, enrollments, notifications and marketplace